objects/EUR_CRM_GB_Contract_CM_Master__c.object
<CustomObject>
    <description>PRUK Data Model</description>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>GB Contract CM Master</relationshipLabel>
        <relationshipName>GB_Contract_CM_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CM_Value__c</fullName>
        <label>CM Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Date_Effective__c</fullName>
        <label>Date Effective</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Date_Expiry__c</fullName>
        <label>Date Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_RTM_Supplier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RTM (Supplier Account)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>GB Contract CM Master</relationshipLabel>
        <relationshipName>GB_Contract_CM_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GB Contract CM Master (EU)</label>
    <nameField>
        <displayFormat>CCM-{00000000}</displayFormat>
        <label>Contract CM Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GB Contract CM Master (EU)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>